--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,7 +18,7 @@ body {
 }
 
 header nav {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 1rem;
@@ -160,12 +160,26 @@ main {
     display: block;
 }
 
+.default p {
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin-bottom: 5rem;
+}
+
+.default {
+    height: 100vh;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .first {
     height: 100vh;
     background-color: #021437;
     position: relative;
     z-index: 0;
     text-align: center;
+    overflow: hidden;
     margin: auto;
 }
 .content-first {
@@ -186,6 +200,7 @@ main {
     animation-duration: 10s;
     animation-iteration-count: infinite;
     animation-name: windL;
+    overflow: hidden;
 }
 .leftBranch {
     left: 0;
@@ -251,4 +266,165 @@ h1 {
     height: 20rem;
     width: 100%;
     display: block;
+}
+
+.second {
+    background-image: url(../img/background-02.png);
+    background-size: cover;
+    height: 100vh;
+    text-align: center;
+}
+
+.content-second {
+    width: 50%;
+    margin: 10rem auto;
+}
+
+.third {
+    background-color: #030a1f;
+    height: 100vh;
+}
+
+.quotes {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+}
+
+.person {
+    width: 45%;
+}
+.person blockquote p {
+    margin: 0;
+}
+
+.person blockquote p {
+    background-color: #17243b;
+    border-radius: 1rem;
+    padding: 3rem;
+    font-size: 1rem;
+    height: 10rem;
+}
+
+.third-content {
+    width: 60%;
+    margin: 10rem auto;
+}
+
+h4 {
+    padding-left: 3rem;
+}
+
+/* lightbox start */
+s .row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.column {
+    float: left;
+    width: 20%;
+    height: 20rem;
+}
+
+.column img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 3;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.612);
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    margin: auto;
+    padding: 0;
+    height: 40rem;
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.mySlides {
+    display: none;
+    height: 40rem;
+}
+
+.mySlides img {
+    height: 100%;
+    margin: auto;
+}
+
+.cursor {
+    cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
 }
