--- a/static/css/main.css
+++ b/static/css/main.css
@@ -225,7 +225,7 @@ h1 {
 }
 
 .smallLine {
-    border: solid rgb(0, 255, 123);
+    border: 0.1rem solid rgb(0, 255, 123);
     width: 30%;
     margin: auto;
     margin: 1rem auto;
@@ -605,4 +605,66 @@ footer figure img {
 
 .prev {
     left: 0;
+}
+
+.praktisch {
+    background-color: #021437;
+    position: relative;
+    z-index: 0;
+    text-align: center;
+    overflow: hidden;
+    margin: 10rem auto;
+}
+
+.content-prak {
+    width: 50%;
+}
+
+.praktisch .wind {
+    height: 30rem;
+}
+
+.praktisch p {
+    margin: 0;
+    font-size: 1.25rem;
+}
+
+.praktisch .prak-divide {
+    margin: 2.5rem 0;
+}
+
+.praktisch span {
+    background-color: #032769;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    font-weight: 700;
+}
+
+.content-prak h1:nth-child(2) {
+    padding-top: 2rem;
+}
+
+.sections {
+    margin-bottom: 3rem;
+}
+
+.praktisch a {
+    color: white;
+    text-decoration: underline rgb(0, 255, 123);
+    transition: 0.2s ease-in-out;
+}
+
+.praktisch a:hover {
+    text-decoration: none;
+    color: rgb(0, 255, 123);
+}
+
+.gallerij {
+    overflow: hidden;
+    position: relative;
+}
+
+.gallerij .wind {
+    height: 30rem;
+    top: 5%;
 }
