generate faq loop add on

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -668,3 +668,41 @@ footer figure img {
     height: 30rem;
     top: 5%;
 }
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 1.125rem;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 0.9375rem;
+    transition: 0.4s;
+}
+
+.active,
+.accordion:hover {
+    background-color: #ccc;
+}
+
+.accordion:after {
+    content: "\002B";
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 0.3125rem;
+}
+
+.active:after {
+    content: "\2212";
+}
+
+.panel {
+    padding: 0 1.125rem;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
