--- a/static/css/main.css
+++ b/static/css/main.css
@@ -669,40 +669,62 @@ footer figure img {
     top: 5%;
 }
 
+.faqs {
+    width: 50%;
+    margin: 7rem auto;
+}
+
+.faqs h2 {
+    text-align: center;
+    text-transform: uppercase;
+}
+
+button {
+    background-color: #021437;
+    border: none;
+}
+.openBorder {
+    background-color: #021437;
+    border: 0.15rem solid white;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    padding: 1rem;
+}
 .accordion {
-    background-color: #eee;
-    color: #444;
+    color: white;
     cursor: pointer;
     padding: 1.125rem;
     width: 100%;
-    border: none;
-    text-align: left;
+    text-align: center;
     outline: none;
     font-size: 0.9375rem;
-    transition: 0.4s;
+    transition: 0.6s ease-in-out;
 }
 
-.active,
+.activeAcc,
 .accordion:hover {
-    background-color: #ccc;
+    color: grey;
 }
 
 .accordion:after {
-    content: "\002B";
-    color: #777;
+    content: "\02795";
+    color: white;
     font-weight: bold;
     float: right;
     margin-left: 0.3125rem;
 }
 
-.active:after {
-    content: "\2212";
+.activeAcc:after {
+    color: white;
 }
 
 .panel {
     padding: 0 1.125rem;
-    background-color: white;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+}
+
+.bar {
+    background-color: #021437;
 }
