--- a/static/css/main.css
+++ b/static/css/main.css
@@ -537,7 +537,11 @@ footer figure img {
 }
 
 .map-pointers {
-    height: auto;
+    position: relative;
+}
+
+.map-pointers div {
+    position: absolute;
 }
 
 .gridbox {
@@ -689,6 +693,7 @@ button {
     border-radius: 1rem;
     margin-bottom: 1rem;
     padding: 1rem;
+    transition: 0.6s ease-in-out;
 }
 .accordion {
     color: white;
@@ -723,6 +728,8 @@ button {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+    transition: 1s ease-in-out;
+    transition-delay: 0s;
 }
 
 .bar {
